# bazel-examples

pnpm-workspaces/: .bazelignore  BUILD.bazel  WORKSPACE.bazel  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
pnpm-workspaces/apps/alpha/: BUILD.bazel
pnpm-workspaces/apps/alpha/src/: main.spec.ts
pnpm-workspaces/apps/gamma/: BUILD.bazel
pnpm-workspaces/apps/gamma/src/: main.js
