load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")

# link all dependencies from root package.json
npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = ["//:node_modules/@tsconfig/node16-strictest"],
)

ts_project(
    name = "jest_config",
    srcs = ["jest.config.ts"],
    tsconfig = {},
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@jest/types",
    ],
)
