load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "alpha",
    srcs = ["src/main.ts"],
    tsconfig = "//:tsconfig",
    deps = [
        ":node_modules/inspirational-quotes",  # this uses the version defined in the local package.json
        "//:node_modules/@bazel-poc/one",
        "//:node_modules/@bazel-poc/shared",
        "//:node_modules/@types/node",
        "//:node_modules/star-wars-quotes",
    ],
)

ts_project(
    name = "alpha_test",
    srcs = ["src/main.spec.ts"],
    tsconfig = "//:tsconfig",
    deps = [
        ":alpha",
        "//:node_modules/@types/jest",
        "//:node_modules/@types/node",
        "//:node_modules/jest",
        "//:node_modules/ts-jest",
    ],
)

jest_test(
    name = "test",
    config = "//:jest_config",
    data = [
        ":alpha_test",
    ],
)

js_binary(
    name = "main",
    data = [":alpha"],
    entry_point = "src/main.js",
)
